# pyvmte

./: .codespell-ignore  .gitignore  .pre-commit-config.yaml  CHANGES.md  CITATION  README.md  architecture.md  environment.yml  linear_program.md  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
.github/workflows/: main.yml
paper/: pyvmte.tex  pyvmte_pres.tex  refs.bib  task_paper.py
sandbox/: __init__.py  jb_scipy_linprog.ipynb  jb_scipy_linprog.py
src/pyvmte/: __init__.py  classes.py  config.py  config_mc_by_size.py  config_mc_by_target.py  processing.py  pyvmte.py  solutions.py  utilities.py
src/pyvmte/analysis/: task_analysis.py
src/pyvmte/data_management/: __init__.py  task_data_management.py
src/pyvmte/estimation/: __init__.py  estimation.py  estimation_kwargs.py  profile_estimation_confidence_interval.py
src/pyvmte/final/: __init__.py  task_final.py
src/pyvmte/identification/: __init__.py  identification.py  identification_kwargs.py
src/pyvmte/profiling/: __init__.py  profile_bpoly_integrate_vs_manual.py  profile_estimate_bernstein_fig7.py  profile_estimate_gamma.py  profile_estimation.py  profile_generate_array_pscores.py  profile_identification.py  profile_identification_bernstein.py  profile_iv.py  profile_lp_algos_estimation.py  profile_montecarlo.py  profile_pscores.py  profile_simulate.py
src/pyvmte/pyvmte_estimation/: __init__.py  pyvmte_estimation.py
src/pyvmte/pyvmte_identification/: __init__.py  pyvmte_identification.py
src/pyvmte/replication/: __init__.py  plot_bounds_by_target.py  task_plot_bounds_by_target.py
src/pyvmte/simulation/: __init__.py  create_bounds_by_target.py  plot_by_target.ipynb  sim_results_figure2.pkl  sim_results_figure3.pkl  sim_results_figure5.pkl  simulation_funcs.py  simulation_plotting.py  task_plot_by_target.py  task_plot_simulation_by_sample_size.py  (+7 more)
tests/analysis/: test_model.py  test_predict.py
tests/classes/: __init__.py  test_class_methods.py  test_classes.py
tests/data_management/: test_clean_data.py
tests/estimation/: __init__.py  test_consistently_estimate_bounds_mst.py  test_consistently_estimate_lp_inputs.py  test_estimate_paper_bounds.py  test_estimation.py  test_estimation_confidence_interval.py  test_estimation_funcs.py  test_estimation_identif_estimands.py  test_estimation_lp_inputs.py  test_weight_estimation.py
tests/identification/: __init__.py  test_identification.py  test_identification_intermediate.py  test_identification_lp_inputs.py  test_identification_paper_figs.py  test_identification_results_mst.py  test_weights.py
tests/simple_model/: __init__.py  test_simple_model_estimation.py  test_simple_model_identification.py
tests/utilities/: test_bpoly.py  test_error_reports.py  test_utilities.py
(+3 files in other folders)
