[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]

[tool.setuptools_scm]
write_to = "src/pyvmte/_version.py"

[tool.pytask.ini_options]
paths = ["./src/pyvmte", "./paper"]
pdbcls = "pdbp:Pdb"

[tool.ruff]
target-version = "py311"
select = ["ALL"]
fix = true
extend-ignore = [
    "S101",  # Use of `assert` detected.
    "PGH003", # PGH003 Use specific rule codes when ignoring type issues
    "ANN", # type annotations
    "PLR0913", # PLR0913 Too many arguments to function call
    "PERF401", # PERF401 Use a list comprehension to create a transformed list
    "TD001", # TODO stuff
    "TD002", # TODO stuff
    "TD003", # TODO stuff
    "TD004", # TODO stuff
    "FIX001", # not sure what this means
    "FIX002", # not sure what this means
    "ARG001", # ARG001 Unused function argument
    "PLR0912", # too many branches (todo: fix this)
    "C901", # too complex (todo: fix this)
    "S301", # repo is not using outside data so ignore security issues
]

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "PD011"]
"task_*.py" = ["ANN"]

[tool.ruff.pydocstyle]
convention = "google"


[tool.nbqa.config]
black = "pyproject.toml"

[tool.nbqa.mutate]
black = 1


[tool.pytest.ini_options]
addopts = "--pdbcls=pdbp:Pdb"
filterwarnings = []
markers = [
    "wip: Tests that are work-in-progress.",
    "unit: Flag for unit tests which target mainly a single function.",
    "integration: Flag for integration tests which may comprise of multiple unit tests.",
    "end_to_end: Flag for tests that cover the whole program.",
]
norecursedirs = ["docs"]

[tool.yamlfix]
line_length = 88
none_representation = "null"
